2.8 beta crashes when converting curve to mesh #61353

Closed
opened 2019-02-09 12:05:51 +01:00 by Ron Zandbergen · 15 comments

System Information
Operating system: win 64
Graphics card: GeForce GTX 1050 Ti

Blender Version
Broken: 2.8, blender-2.80-191b8951f7af-win64, download 9 feb 2019
Worked: (optional)

Short description of error
Using Circle Curve with Bezier Curve as bevel object. When converting Curve to Mesh blender crashes.

Exact steps for others to reproduce the error
See attached blend file.Bell 02.blend.

The issue here is that there is a cyclic dependency.
The bevel object of the circle is the curve and the bevel object of the curve is the circle.
Just open the curves.blend file and set the bevel object of the curve to the circle and hit convert to mesh.
curves.blend

**System Information** Operating system: win 64 Graphics card: GeForce GTX 1050 Ti **Blender Version** Broken: 2.8, blender-2.80-191b8951f7af-win64, download 9 feb 2019 Worked: (optional) **Short description of error** Using Circle Curve with Bezier Curve as bevel object. When converting Curve to Mesh blender crashes. **Exact steps for others to reproduce the error** See attached blend file.[Bell 02.blend](https://archive.blender.org/developer/F6558465/Bell_02.blend). The issue here is that there is a cyclic dependency. The bevel object of the circle is the curve and the bevel object of the curve is the circle. Just open the curves.blend file and set the bevel object of the curve to the circle and hit convert to mesh. [curves.blend](https://archive.blender.org/developer/F6591897/curves.blend)
Author

Added subscriber: @Taaske

Added subscriber: @Taaske

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-02-09 13:49:27 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555556884560 in curve_get_tessellate_point (scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408,
    use_render_resolution=use_render_resolution@entry=false, editmode=editmode@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:759
759		ModifierData *md = modifiers_getVirtualModifierList(ob, &virtualModifierData);
(gdb) bt
#0  0x0000555556884560 in curve_get_tessellate_point (scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408,
    use_render_resolution=use_render_resolution@entry=false, editmode=editmode@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:759
#1  0x00005555568847c8 in curve_calc_modifiers_pre (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408,
    nurb=nurb@entry=0x7fffff7ff570, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:825
#2  0x0000555556887b66 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408,
    dispbase=0x7fffff7ff670, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1591
#3  0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>,
    dispbase=dispbase@entry=0x7fffff7ff670, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836
#4  0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce59fe08,
    disp=disp@entry=0x7fffff7ff7c0, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855
#5  0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce59fe08,
    dispbase=0x7fffff7ff8d0, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596
#6  0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>,
    dispbase=dispbase@entry=0x7fffff7ff8d0, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836
#7  0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408,
    disp=disp@entry=0x7fffff7ffa20, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855
#8  0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408,
    dispbase=0x7fffff7ffb30, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596
#9  0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>,
    dispbase=dispbase@entry=0x7fffff7ffb30, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836
#10 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce59fe08,
    disp=disp@entry=0x7fffff7ffc80, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855
#11 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce59fe08,
    dispbase=0x7fffff7ffd90, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596
#12 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>,
    dispbase=dispbase@entry=0x7fffff7ffd90, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836
#13 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408,
    disp=disp@entry=0x7fffff7ffee0, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855
#14 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408,
    dispbase=0x7fffff7ffff0, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596
#15 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>,
    dispbase=dispbase@entry=0x7fffff7ffff0, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false)
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555556884560 in curve_get_tessellate_point (scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408, use_render_resolution=use_render_resolution@entry=false, editmode=editmode@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:759 759 ModifierData *md = modifiers_getVirtualModifierList(ob, &virtualModifierData); (gdb) bt #0 0x0000555556884560 in curve_get_tessellate_point (scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408, use_render_resolution=use_render_resolution@entry=false, editmode=editmode@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:759 #1 0x00005555568847c8 in curve_calc_modifiers_pre (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408, nurb=nurb@entry=0x7fffff7ff570, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:825 #2 0x0000555556887b66 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408, dispbase=0x7fffff7ff670, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1591 #3 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>, dispbase=dispbase@entry=0x7fffff7ff670, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836 #4 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce59fe08, disp=disp@entry=0x7fffff7ff7c0, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855 #5 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce59fe08, dispbase=0x7fffff7ff8d0, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596 #6 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>, dispbase=dispbase@entry=0x7fffff7ff8d0, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836 #7 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408, disp=disp@entry=0x7fffff7ffa20, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855 #8 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408, dispbase=0x7fffff7ffb30, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596 #9 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>, dispbase=dispbase@entry=0x7fffff7ffb30, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836 #10 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce59fe08, disp=disp@entry=0x7fffff7ffc80, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855 #11 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce59fe08, dispbase=0x7fffff7ffd90, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596 #12 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>, dispbase=dispbase@entry=0x7fffff7ffd90, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1836 #13 0x0000555556870d08 in BKE_curve_bevel_make (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=ob@entry=0x7fffce5a0408, disp=disp@entry=0x7fffff7ffee0, for_render=for_render@entry=true, use_render_resolution=use_render_resolution@entry=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/curve.c:1855 #14 0x0000555556886f90 in do_makeDispListCurveTypes (depsgraph=depsgraph@entry=0x7fffe43fd608, scene=scene@entry=0x7fffce91c008, ob=0x7fffce5a0408, dispbase=0x7fffff7ffff0, r_final=0x0, for_render=for_render@entry=true, for_orco=false, use_render_resolution=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/displist.c:1596 #15 0x00005555568882d7 in BKE_displist_make_curveTypes_forRender (depsgraph=0x7fffe43fd608, scene=0x7fffce91c008, ob=<optimized out>, dispbase=dispbase@entry=0x7fffff7ffff0, r_final=r_final@entry=0x0, for_orco=for_orco@entry=false, use_render_resolution=false) ```

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@Taaske Could you provide us with a simple sample created with 2.79 that reproduces the issue right before the conversion happens?
Right now when opening your file I get an immediate crash: curve.c:1862, BKE_curve_bevel_make(), at 'cu->bevobj->runtime.curve_cache != ((void *)0)'

@Taaske Could you provide us with a simple sample created with 2.79 that reproduces the issue right before the conversion happens? Right now when opening your file I get an immediate crash: `curve.c:1862, BKE_curve_bevel_make(), at 'cu->bevobj->runtime.curve_cache != ((void *)0)'`

For the records, by following your instructions I cannot reproduce the crash:
curves.blend

For the records, by following your instructions I cannot reproduce the crash: [curves.blend](https://archive.blender.org/developer/F6591897/curves.blend)

Also getting immediate assert and curves.blend converts as expected.

Also getting immediate assert and `curves.blend` converts as expected.

Just to reiterate what I told @dfelinto on IRC yesterday.
The issue here is that it the .blend that asserts for you guys, there is a cyclic dependency.

The bevel object of the circle is the curve and the bevel object of the curve is the circle.
Just open the curves.blend file and set the bevel object of the curve to the circle and hit convert to mesh.

Just to reiterate what I told @dfelinto on IRC yesterday. The issue here is that it the .blend that asserts for you guys, there is a cyclic dependency. The bevel object of the circle is the curve and the bevel object of the curve is the circle. Just open the `curves.blend` file and set the bevel object of the curve to the circle and hit convert to mesh.
Author

Do you guys still need the requested sample in 2.79 or does the above post from sebastian cover this.

Do you guys still need the requested sample in 2.79 or does the above post from sebastian cover this.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@Taaske : I think thats fine... (no need for the 2.79 file)

I think we can be a bit smarter in rna_Curve_otherObject_poll, checking...

@Taaske : I think thats fine... (no need for the 2.79 file) I think we can be a bit smarter in `rna_Curve_otherObject_poll`, checking...
Member

Was just an idea to avoid cyclic dependencies when picking curve bevobj/taperobj: P912
(but I guess a bad one because it doesnt cover everything...)

Anyways, this doesnt add anything to solving the crash, sorry for the noise...

Was just an idea to avoid cyclic dependencies when picking curve bevobj/taperobj: [P912](https://archive.blender.org/developer/P912.txt) (but I guess a bad one because it doesnt cover everything...) Anyways, this doesnt add anything to solving the crash, sorry for the noise...
Member

@ideasman42 : is this OK to stay on your desk?

@ideasman42 : is this OK to stay on your desk?

This issue was referenced by 6074f62d1a

This issue was referenced by 6074f62d1a099fc378aa25506a93321dba2d956b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61353
No description provided.