source/blender/editors/curve/editcurve.c
@@ -6660,7 +6660,7 @@ static int match_texture_space_exec(bContext *C, wmOperator *UNUSED(op))
 	int a;
 
 	if (object->runtime.curve_cache == NULL) {
-		BKE_displist_make_curveTypes(depsgraph, scene, object, false, false);
+		BKE_displist_make_curveTypes(depsgraph, scene, object, false, false, NULL);
 	}
 
 	INIT_MINMAX(min, max);
